--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -7,7 +7,7 @@
 @import './menu-toggle/menu-toggle';
 @import './social-media/social-media';
 @import './fraimed-container/fraimed-container';
-@import './rangeslider/rangeslider';
+@import './dropdown/dropdown';
 @import './salary-filter/salary-filter';
 @import './filters/filters';
 @import './main-menu/main-menu';
@@ -15,9 +15,12 @@
 @import './main-header/main-header';
 @import './main-content/main-content';
 @import './registration/registration';
+@import './recruitment-form/recruitment-form';
 @import './dashboard/dashboard';
 @import './search-form/search-form';
+@import './upload-form/upload-form';
 @import './search-candidate/search-candidate';
+@import './candidates-profile/candidates-profile';
 @import './applicant/applicant';
 @import './main-footer/main-footer';
 @import './modal/modal';
