--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -56,6 +56,12 @@
         transform: translateY(0%);
       }
     }
+
+    &_candidate {
+      &:before {
+        align-self: center;
+      }
+    }
   }
 }
 
