--- a/src/components/search-form/search-form.hbs
+++ b/src/components/search-form/search-form.hbs
@@ -23,11 +23,15 @@
             </select>
         </div>
     </div>
-    <div class="search-form__tags">
-        <div class="base__notes search-form__tag">Київ</div>
-        <div class="base__notes search-form__tag">Python</div>
-        <div class="base__notes search-form__tag">1000-2200$</div>
-        <div class="base__notes search-form__tag">Upper-intermedia</div>
-        <div class="base__notes search-form__tag">Intermedia</div>
+    <div class="search-form__tags-subscribe">
+        <div class="search-form__tags">
+            <div class="base__notes search-form__tag">Київ</div>
+            <div class="base__notes search-form__tag">Python</div>
+            <div class="base__notes search-form__tag">1000-2200$</div>
+            <div class="base__notes search-form__tag">Upper-intermediate</div>
+            <div class="base__notes search-form__tag">Upper-intermedia</div>
+        </div>
+        <div class="search-form__subscribe"></div>
     </div>
+
 </form>
