--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -56,7 +56,7 @@
                         <div class="offer__description">Текст</div>
                         <div class="offer__contact offer__contact_opened">Контакт відкрито</div>
                         <div class="offer__menu">
-                            {{> icon iconName="verticalburger_black" classNames="offer-menu" }}
+                            {{> dropdown }}
                         </div>
                     </div>
                     <div class="offer">
@@ -67,7 +67,7 @@
                         <div class="offer__description">Текст</div>
                         <div class="offer__contact">Чекає на відповідь</div>
                         <div class="offer__menu">
-                            {{> icon iconName="verticalburger_black" classNames="offer-menu" }}
+                            {{> dropdown }}
                         </div>
                     </div>
                     <div class="offer">
@@ -78,7 +78,7 @@
                         <div class="offer__description">Текст</div>
                         <div class="offer__contact">Чекає на відповідь</div>
                         <div class="offer__menu">
-                            {{> icon iconName="verticalburger_black" classNames="offer-menu" }}
+                            {{> dropdown }}
                         </div>
                     </div>
                 </div>
