--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -1,6 +1,6 @@
 .filters {
   &__container {
-    padding: 1px 19px 19px;
+    padding: 1px 19px 11px;
   }
 
   @media(max-width: 1099px) {
@@ -155,5 +155,51 @@
     overflow: hidden;
     width: 100%;
     background-color: #fff;
+  }
+
+  &__subtitle {
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.05em;
+    color: $lightgray;
+    margin-bottom: 16px;
+  }
+
+  &__subscribers {
+    padding-bottom: 12px;
+  }
+
+  &__subscriber {
+    display: flex;
+    justify-content: space-between;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.25;
+    letter-spacing: 0.05em;
+    margin-bottom: 12px;
+
+    &-link {
+      display: block;
+    }
+
+    &-icon {
+      width: 16px;
+      height: 16px;
+      cursor: pointer;
+    }
+  }
+
+  &.my-subscribers {
+    .filter__container {
+      display: block;
+      padding: 7px 0;
+      margin: 0 -4px 0 1px;
+
+      @media(max-width: 1099px) {
+        margin: 0;
+        padding: 10px 0;
+      }
+    }
   }
 }
