--- a/src/components/nav/nav.hbs
+++ b/src/components/nav/nav.hbs
@@ -1,8 +1,8 @@
 <nav id="nav">
     <ul>
-        <li><a href="./candidates.html" class="nav__link">Кандидати</a></li>
+        <li><a href="./recruter-search-candidates-list.html" class="nav__link">Кандидати</a></li>
         <li><a href="./propositions.html" class="nav__link">Пропозиції</a></li>
-        <li><a href="./hiring.html" class="nav__link">Найми</a></li>
+        <li><a href="./recruitment-list.html" class="nav__link">Найми</a></li>
     </ul>
 </nav>
 
