--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -19,6 +19,7 @@
 @import './dashboard/dashboard';
 @import './search-form/search-form';
 @import './upload-form/upload-form';
+@import './worksheet-form/worksheet-form';
 @import './search-candidate/search-candidate';
 @import './candidates-profile/candidates-profile';
 @import './applicant/applicant';
