--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -73,8 +73,8 @@
 
   &__label {
     cursor: pointer;
-    margin: 8px;
-    padding: 5px;
+    //margin: 8px;
+    padding: 5px 7px;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
