--- a/src/components/upload-form/upload-form.hbs
+++ b/src/components/upload-form/upload-form.hbs
@@ -5,7 +5,7 @@
             <select name="site" class="base__subtitle search-form__select upload-form__select">
                 <option value="1">Djinni</option>
                 <option value="2">Linkedin</option>
-                <option value="3">довгий селектор</option>
+                <option value="3">iнше</option>
             </select>
         </div>
         <div class="upload-form__line-right">
